# Codex-Snabb

./: .gitignore  CLAUDE.md  Cargo.toml  Claude.md  LICENSE  README.md  Readme.md  architecture.md  roadmap.md  skills-lock.json  tasks.md
.agents/skills/rust-best-practices/: SKILL.md
.claude/: CONTEXT.md
openspec/changes/image-viewer/: apply-progress.md  design.md  proposal.md  spec.md  verify-report.md
src/: main.rs
src/app/: helpers.rs  keymap.rs  mod.rs  mouse.rs
src/core/: budgets.rs  command.rs  file_types.rs  ids.rs  mod.rs  settings.rs
src/editor/: brackets.rs  buffer.rs  cursor.rs  highlighting.rs  image.rs  indent.rs  mod.rs  multicursor.rs  search.rs  selection.rs  tabs.rs  ts_highlight.rs  undo.rs  unicode.rs  viewport.rs
src/explorer/: folder_picker.rs  mod.rs  tree.rs
src/git/: branch_picker.rs  commands.rs  mod.rs
src/lsp/: client.rs  mod.rs  transport.rs
src/observe/: mod.rs
src/projects/: mod.rs  project.rs  render.rs
src/search/: engine.rs  mod.rs  render.rs
src/source_control_git/: branch_picker.rs  commands.rs  mod.rs  render.rs
src/terminal/: input.rs  mod.rs  pane.rs  renderer.rs  session.rs  tree.rs
src/ui/: branch_picker.rs  context_menu.rs  git_panel.rs  go_to_line.rs  icons.rs  layout.rs  mod.rs  palette.rs  panels.rs  projects_panel.rs  quick_open.rs  quit_modal.rs  rename_modal.rs  save_as_modal.rs  search_panel.rs  settings_panel.rs  theme.rs
src/workspace/: explorer.rs  folder_picker.rs  mod.rs  projects.rs  quick_open.rs  quit_modal.rs  rename.rs  save_as.rs
