[package]
name = "ide-tui"
version = "0.1.0"
edition = "2024"
description = "IDE TUI en Rust — RAM/CPU First"
license = "MIT"

[dependencies]
# UI y terminal
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Runtime async
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "fs",
] }
tokio-util = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialización (project manager, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal PTY
portable-pty = "0.8"

# Search
regex = "1"
globset = "0.4"

# Observabilidad
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
