[package]
name = "ide-tui"
version = "0.1.0"
edition = "2024"
description = "IDE TUI en Rust — RAM/CPU First"
license = "MIT"

[dependencies]
# UI y terminal
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Runtime async
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "fs",
] }
tokio-util = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialización (project manager, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal PTY
portable-pty = "0.8"

# Search
regex = "1"
globset = "0.4"

# LSP
lsp-types = "0.97"

# Syntax highlighting — syntect (fallback para lenguajes sin grammar tree-sitter)
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

# Tree-sitter — parser incremental para syntax highlighting de alta performance.
# Core + capa de highlight (requiere versión compatible entre core y grammars).
# Solo se incluyen grammars compatibles con el core ^0.25.x.
# Lenguajes sin grammar tree-sitter caen automáticamente a syntect como fallback.
tree-sitter          = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language  = "0.1"

# Grammars compatibles con tree-sitter ^0.25
tree-sitter-rust       = "0.24"   # req ^0.25 via tree-sitter-language
tree-sitter-typescript = "0.23"   # req ^0.25.4
tree-sitter-go         = "0.25"   # req ^0.25.4
tree-sitter-json       = "0.24"   # req ^0.24 (compatible con 0.25)
tree-sitter-css        = "0.25"   # req ^0.25
tree-sitter-bash       = "0.25"   # req ^0.25

# Grammars pendientes de actualización upstream (plain text fallback por ahora):
# tree-sitter-python    — req ^0.24, verificar compatibilidad
# tree-sitter-c         — req ^0.24, verificar compatibilidad
# tree-sitter-cpp       — req ^0.25.4 (pendiente)
# tree-sitter-html      — req ^0.24, verificar compatibilidad
# tree-sitter-toml      — req ^0.20 (muy viejo, sin fork compatible)
# tree-sitter-yaml      — req ^0.19 (muy viejo, sin fork compatible)
# tree-sitter-markdown  — req ^0.20 (muy viejo, sin fork compatible)

# Diálogo nativo de selección de carpeta/archivo (usa WinAPI / AppKit / GTK)
rfd = { version = "0.15", default-features = false }

# Observabilidad
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
